--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -138,9 +138,9 @@
             <div class="col-5">
               <div class="card mx-auto" style="width: 23rem;">
                 <img class="card-img-top" src="blank.png" alt="Profile Picture">
-                <p><center><%= users[0].schoollevel %></center></p>
-                <p><center>Subjects: <%= users[0].subjects %></center></p>
-                <p><center>Average Rating: <%= users[0].rating %></center></p>
+                <p><center><%= user.schoollevel %></center></p>
+                <p><center>Subjects: <%= user.subjects %></center></p>
+                <p><center>Average Rating: <%= user.rating %></center></p>
                 <center><span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -154,8 +154,8 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div>
-                      <h3><%= users[0].firstname %> <%= users[0].lastname %></h3>
-                      <h5><%= users[0].location %></h5>
+                      <h3><%= user.firstname %> <%= user.lastname %></h3>
+                      <h5><%= user.location %></h5>
                       <div class="card mx-auto" style="width: 33rem;">
                           <div class="card-body">
                             <h5>Bio:</h5>
@@ -191,7 +191,7 @@
                               <div class="card mx-auto" style="width: 57rem;">
                                 <div class="card-body">
                                   <div class="feedback">
-                                    <p><%= feedback[i].reviewText %></p>
+                                    <p><%= feedback[i].reviewtext %></p>
                                   </div>
                                  </div>
                                </div>
