--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -140,7 +140,7 @@
                 </div>
                 <div class="form-group">
                   <label for="username" class="h6">Username</label>
-                  <input type="text" class="form-control" id="username" placeholder="Username" required>
+                  <input type="text" class="form-control" id="username" name ="username" placeholder="Username" required>
                   <span class="error"><small id="usernameError" style="color:red"></small></span>
                 </div>
                 <div class="form-group">
