--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -125,7 +125,9 @@
     <div class="topnav">
       <a class="active"href="#home">Home</a>
       <a class="active"href="#about">About</a>
-      <a class="active"href="#about">Find Tutor</a>
+      <form action="/tutor-finder">
+        <input type="submit" name="Find a Tutor" value="Find a Tutor">
+      </form>
       <a class="active"href="#about">Settings</a>
     </div>
     <div class ="container-fluid">
