--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -30,7 +30,18 @@
         background-color: #CFbf5C;
         color: black;
       }
-
+      .topnav input{
+        float:left;
+        color:#000000;
+        text-align: center;
+        padding: 10px 14px;
+        text-decoration: none;
+        font-size: 17px;
+      }
+      .topnav input:hover {
+        background-color: #CFbf5C;
+        color: black;
+      }
       /* Box styles */
       .myBox {
       border: none;
