fixing style of navbar

--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -28,6 +28,7 @@
           }
           .topnav input{
             float:left;
+            background-color: #C7BA7C;
             color:#000000;
             text-align: center;
             padding: 10px 14px;
