--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -33,6 +33,7 @@
       .topnav input{
         float:left;
         color:#000000;
+        background-color: #C7BA7C;
         text-align: center;
         padding: 10px 14px;
         text-decoration: none;
