--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -34,6 +34,7 @@
         float:left;
         color:#000000;
         background-color: #C7BA7C;
+        display: inline-block;
         text-align: center;
         padding: 10px 14px;
         text-decoration: none;
