--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -39,6 +39,7 @@
         padding: 10px 14px;
         text-decoration: none;
         font-size: 17px;
+        border: none;
       }
       .topnav input:hover {
         background-color: #CFbf5C;
