--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -28,12 +28,14 @@
           }
           .topnav input{
             float:left;
-            background-color: #C7BA7C;
             color:#000000;
+            background-color: #C7BA7C;
+            display: inline-block;
             text-align: center;
             padding: 10px 14px;
             text-decoration: none;
             font-size: 17px;
+            border: none;
           }
           .topnav input:hover {
             background-color: #CFbf5C;
