--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -137,7 +137,9 @@
   </head>
   <body style="background-color:#000000">
     <div class="topnav">
-      <a class="active"href="#home">Home</a>
+      <form action="/profile">
+        <input type="submit" name="Home" value="Home">
+      </form>
       <a class="active"href="#about">About</a>
       <form action="/tutor-finder">
         <input type="submit" name="Find a Tutor" value="Find a Tutor">
