Added about pages and update login page and registration page with correct links

--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -9,7 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <style>
-          <!-- 
+          <!--
           .topnav{
             background-color: #C7BA7C;
             overflow:hidden;
@@ -48,7 +48,9 @@
           <form action="/">
             <input type="submit" name="home" value="Home">
           </form>
-          <a class="active"href="#about">About</a>
+          <form action="/About">
+            <input type="submit" name="About" value="About">
+          </form>
         </div>
         <div class="container-fluid">
           <br>
