--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -10,6 +10,7 @@
     		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <script src="../../resources/js/regPageJS.js"></script>
         <style>
+          <!--
           .topnav{
             background-color: #C7BA7C;
             overflow:hidden;
@@ -22,19 +23,22 @@
             text-decoration: none;
             font-size: 17px;
           }
+          .topnav a:hover {
+            background-color: #CFbf5C;
+            color: black;
+          }
           .topnav input{
             float:left;
             color:#000000;
+            background-color: #C7BA7C;
+            display: inline-block;
             text-align: center;
             padding: 10px 14px;
             text-decoration: none;
             font-size: 17px;
+            border: none;
           }
           .topnav input:hover {
-            background-color: #CFbf5C;
-            color: black;
-          }
-          .topnav a:hover {
             background-color: #CFbf5C;
             color: black;
           }
@@ -42,11 +46,13 @@
       </style>
       </head>
       <body style="background-color:#000000">
-        <div class="topnav">
-          <form action="/" method="GET">
-            <input type="submit" name="home" value="Home"> 
+        <div class="topnav" >
+          <form action="/" >
+            <input type="submit" name="home" value="Home">
           </form>
-          <a class="active"href="#about">About</a>
+          <form action="/About">
+            <input type="submit" name="About" value="About">
+          </form>
         </div>
         <div class="container-fluid">
           <br>
