--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -144,7 +144,7 @@
       <form action="/tutor-finder">
         <input type="submit" name="Find a Tutor" value="Find a Tutor">
       </form>
-      <a class="active"href="#about">Settings</a>
+      <a class="active"href="settings.ejs">Settings</a>
     </div>
     <div class ="container-fluid">
       <br>
