--- a/views/pages/searchPage.ejs
+++ b/views/pages/searchPage.ejs
@@ -29,6 +29,7 @@
             <th>Subject</th>
           </tr>
         <% for (var i = 0;i < tutors.length; i++) { %>
+          <% console.log("ID: " + tutors[i].id)%>
           <tr>
             <td name="studentChoice" id="studentChoice" value=<%= tutors[i].id %>><form action="/userProfile"><input type="submit" name="user" style="background:none;border:0;color:#C7BA7C" value=<%= tutors[i].firstname + " " + tutors[i].lastname %>></input></form></td>
             <td><%= tutors[i].rating %></td>
