--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -144,7 +144,8 @@
       <form action="/tutor-finder">
         <input type="submit" name="Find a Tutor" value="Find a Tutor">
       </form>
-      <a class="active"href="settings">Settings</a>
+      <form action ="/settings">
+        <input type="submit" name="settings" value="settings">
     </div>
     <div class ="container-fluid">
       <br>
