--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -144,8 +144,7 @@
       <form action="/tutor-finder">
         <input type="submit" name="Find a Tutor" value="Find a Tutor">
       </form>
-      <form action ="/settings">
-        <input type="submit" name="settings" value="settings">
+      <a class="active" href="/settings">Settings</a>
     </div>
     <div class ="container-fluid">
       <br>
