--- a/views/pages/searchPage.ejs
+++ b/views/pages/searchPage.ejs
@@ -24,15 +24,16 @@
         </form>
         <table style="width: 100%;color:#C7BA7C;font-family:georgia"> 
           <tr>
+            <th>Username</th>
             <th>Name</th>
             <th>Rating</th>
             <th>Subject</th>
           </tr>
         <% for (var i = 0;i < tutors.length; i++) { %>
           <% console.log("ID: " + tutors[i].id)%>
-          <% var name = tutors[i].firstname + " " + tutors[i].lastname; %>
           <tr>
-            <td name="studentChoice" id="studentChoice" value=<%= tutors[i].id %>><form action="/userProfile"><input type="submit" name="user" style="background:none;border:0;color:#C7BA7C" value=<%= name %>></input></form></td>
+            <td name="studentChoice" id="studentChoice" value=<%= tutors[i].id %>><form action="/userProfile"><input type="submit" name="user" style="background:none;border:0;color:#C7BA7C" value=<%= tutors[i].username %>></input></form></td>
+            <td><%= tutors[i].firstname + " " +  tutors[i].lastname%></td>
             <td><%= tutors[i].rating %></td>
             <td ><%= tutors[i].subjects %></td>
           </tr>
