--- a/views/pages/settings.ejs
+++ b/views/pages/settings.ejs
@@ -63,7 +63,7 @@
               <form action="/regPage/valid" method="POST" onsubmit="formDone();" name="regForm" id="regForm" >
                 <div class="row">
                   <div class="col">
-                    <a class="active"href="editBio.ejs">Edit Bio</a>
+                    <a class="active"href="/editBio">Edit Bio</a>
                     
                   </div>
                 </div>
