--- a/views/pages/LoginPage.ejs
+++ b/views/pages/LoginPage.ejs
@@ -44,6 +44,9 @@
       </style>
       </head>
       <body style="background-color:#000000">
+        <% if(incorrectLogin) { %>
+          <script> alert("Incorrect password; please try again"); </script>
+        <% } %>
         <div class="topnav">
           <form action="/">
             <input type="submit" name="home" value="Home">
