--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -46,6 +46,12 @@
       </style>
       </head>
       <body style="background-color:#000000">
+        <% if(userAlreadyInDatabase) { %>
+          <script> alert("Username already registered - please choose a new one") </script>
+        <% } %>
+        <% if(redirectFromLogin) { %>
+          <script> alert("User not found, please register") </script>
+        <% } %>
         <div class="topnav" >
           <form action="/" >
             <input type="submit" name="home" value="Home">
