--- a/views/pages/searchPage.ejs
+++ b/views/pages/searchPage.ejs
@@ -30,7 +30,8 @@
             <th>Subject</th>
           </tr>
         <% for (var i = 0;i < tutors.length; i++) { %>
-          <% console.log("ID: " + tutors[i].id)%>
+          <% let ids = tutors[i].id%>
+          <!--<% console.log("ID: " + tutors[i].id)%>-->
           <tr>
             <td name="studentChoice" id="studentChoice" value=<%= tutors[i].id %>><form action="/userProfile"><input type="submit" name="user" style="background:none;border:0;color:#C7BA7C" value=<%= tutors[i].username %>></input></form></td>
             <td><%= tutors[i].firstname + " " +  tutors[i].lastname%></td>
