added logout button and update profile page
had to delete the sesion data in login form

--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -140,11 +140,13 @@
       <form action="/profile">
         <input type="submit" name="Home" value="Home">
       </form>
-      <a class="active"href="#about">About</a>
       <form action="/tutor-finder">
         <input type="submit" name="Find a Tutor" value="Find a Tutor">
       </form>
       <a class="active" href="/settings">Settings</a>
+      <form action="/login">
+        <input type="submit" name="LogOut" value="Logout">
+      </form>
     </div>
     <div class ="container-fluid">
       <br>
