--- a/views/pages/searchPage.ejs
+++ b/views/pages/searchPage.ejs
@@ -22,10 +22,10 @@
           </select>
         </form>
         <form action="/userProfile">
-          <select name="tutorDropDown" class="custom-select" id="tutorDropDown">
+          <select name="tutorDropDown" class="custom-select" id="tutorDropDown" onchange="this.form.submit()">
             <option>Select a Tutor</option>
           <% for (var i = 0;i < tutors.length; i++) { %>
-            <option value=<%= tutors[i].id%>><%= tutors[i].firstname + " " +  tutors[i].lastname + "\t" + tutors[i].rating + "\t" + tutors[i].subjects%><</option>  
+            <option value=<%= tutors[i].id%>><%= tutors[i].firstname + " " +  tutors[i].lastname + "\t" + tutors[i].rating + "\t" + tutors[i].subjects%>></option>  
           <% } %>  
           </select>
         </form>
