--- a/views/pages/searchPage.ejs
+++ b/views/pages/searchPage.ejs
@@ -25,7 +25,8 @@
           <select name="tutorDropDown" class="custom-select" id="tutorDropDown" onchange="this.form.submit()">
             <option>Select a Tutor</option>
           <% for (var i = 0;i < tutors.length; i++) { %>
-            <option value=<%= tutors[i].id%>><%= tutors[i].firstname + " " +  tutors[i].lastname + "\t" + tutors[i].rating + "\t" + tutors[i].subjects%></option>  
+            <% console.log(tutors[i].id) %>
+            <option value=<%= tutors[i].id %>><%= "Name: " + tutors[i].firstname + " " +  tutors[i].lastname + "\t" + "Rating: " + tutors[i].rating + "\t" + "Major: " + tutors[i].subjects%></option>  
           <% } %>  
           </select>
         </form>
