--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -168,6 +168,15 @@
                 <span class="fa fa-star"></span>
                 <br>
               </div>
+              <div class="card mx-auto" style="width: 23rem;">
+                <form action="#" method="POST">
+                  <h5>Leave a Rating</h5>
+                  <input type="number" name="rating" min="0" max="10" required>
+                  <h5>Leave Feedback</h5>
+                  <input type="text" name="feedback" placeholder="Leave feedback" required>
+                  <center><input type="submit" name="submit" value="Submit Feedback"></center>
+                </form>
+              </div>
             </div>
             <div class="col-4">
               <div class="row">
