--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -168,11 +168,11 @@
                 <br>
               </div>
               <br>
-              <div class="card mx-auto" style="width: 23rem;">
-                <form action="#" method="GET">
-                  <center><input class="btn btn-lg btn-dark" type="submit" value="Leave Feedback"></input></center>
-                </form>
-              </div>
+              <br>
+              <br>
+              <form action="/feedback" method="GET">
+                <center><input class="btn btn-lg btn-dark" type="submit" value="Leave Feedback"></input></center>
+              </form>
             </div>
             <div class="col-4">
               <div class="row">
