--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -169,8 +169,8 @@
               </div>
               <br>
               <br>
-              <br>
               <form action="/feedback" method="GET">
+                <input type="number" name="userId" style="visibility: hidden" value=<%= user.id %>>
                 <center><input class="btn btn-lg btn-dark" type="submit" value="Leave Feedback"></input></center>
               </form>
             </div>
