--- a/views/pages/feedback.ejs
+++ b/views/pages/feedback.ejs
@@ -57,12 +57,18 @@
           </form>
         </div>
       <div class ="container-fluid">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <div class="card mx-auto" style="width: 30rem;">
           <div class="card-body">
             <form action="/feedback/submitted" method="POST" name="feedbackForm" id="feedbackForm">
               <label>Feedback</label>
               <input type="number" name="studentID" style="visibility: hidden" value=<%= user.id %>>
-              <input type="text" name="feedback" class="form-control" rows="10" placehoder="Leave Feedback" required>
+              <textarea type="text" name="feedback" class="form-control" rows="10" placehoder="Leave Feedback" required></textarea>
               <label>Rating</label>
               <input type="number" name="rating" class="form-control" min="0" max="10" required="">
               <center><input class="btn btn-lg btn-dark" type="submit" value="Submit"></input></center>
