--- a/views/pages/editBio.ejs
+++ b/views/pages/editBio.ejs
@@ -8,7 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-        
+
         <style>
           <!--
           .topnav{
@@ -60,7 +60,7 @@
           <br>
           <div class="card mx-auto" style="width: 30rem;">
             <div class="card-body">
-              <form action="/regPage/valid" method="POST" onsubmit="formDone();" name="regForm" id="regForm" >
+              <form action="/editProfile/change" method="POST" onsubmit="formDone();" name="regForm" id="regForm" >
                 <div class="row">
                   <div class="col">
                     <div class="form-group">
@@ -78,7 +78,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="pronouns" class="h6">Preffered Prnouns</label>
+                  <label for="pronouns" class="h6">Preferred Pronouns</label>
                   <select name="pronouns" class="form-control" id="pronouns" required>
                     <option value="">Select Your Pronouns</option>
                     <option value="he">he/him/his</option>
@@ -139,7 +139,7 @@
                 <br>
                 <br>
                 <label for="bio" class="h6">Bio</label>
-                <textarea class="form-control" rows="5" placeholder="Tell us something about yourself"></textarea>
+                <textarea name="bio" class="form-control" rows="5" placeholder="Tell us something about yourself"></textarea>
                 <br>
                 <div class="mt-3">
                   <button id="submit_button" type="submit" class="btn btn-dark btn-block">Submit</button>
