--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -85,7 +85,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="pronouns" class="h6">Preffered Prnouns</label>
+                  <label for="pronouns" class="h6">Preferred Pronouns</label>
                   <select name="pronouns" class="form-control" id="pronouns" required>
                     <option value="">Select Your Pronouns</option>
                     <option value="he">he/him/his</option>
