--- a/views/pages/settings.ejs
+++ b/views/pages/settings.ejs
@@ -8,7 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-       
+
         <style>
           <!--
           .topnav{
@@ -63,8 +63,8 @@
               <form action="/regPage/valid" method="POST" onsubmit="formDone();" name="regForm" id="regForm" >
                 <div class="row">
                   <div class="col">
-                    <a class="active"href="/editBio">Edit Bio</a>
-                    
+                    <a class="active"href="/editProfile">Edit Profile</a>
+
                   </div>
                 </div>
             </div>
