--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -210,7 +210,9 @@
                     <div class="myBox">
                       <h5>Other User Feedback:</h5>
                       <% for(var i = 0; i < feedback.length; i++) { %>
-                        <h5><%= feedback[i].reviewtext %></h5>       
+                        <div class="card mx-auto"></div>
+                          <div class="card-body"></div>
+                            <h5><%= feedback[i].reviewtxt %></h5>   
                       <% } %>
                     </div>
                   </div>
