--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -212,7 +212,8 @@
                       <% for(var i = 0; i < feedback.length; i++) { %>
                         <div class="card mx-auto"></div>
                           <div class="card-body"></div>
-                            <h5><%= feedback[i].reviewtxt %></h5>   
+                            <div class="col-4"></div>
+                              <h5><%= feedback[i].reviewtext %></h5>   
                       <% } %>
                     </div>
                   </div>
