--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -210,7 +210,7 @@
                     <div class="myBox">
                       <h5>Other User Feedback:</h5>
                       <% for(var i = 0; i < feedback.length; i++) { %>
-                        <div class="card mx-auto"></div>
+                        <div class="card"></div>
                           <div class="card-body"></div>
                             <div class="col-4"></div>
                               <h5><%= feedback[i].reviewtext %></h5>   
