--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -203,12 +203,13 @@
             </div>
           </div>
           <div class="card" style="width: 57rem;">
-            <h5>Other User Feedback:</h5>
+            <div class="card-header"><h5>Other User Feedback:</h5></div>
           <% for(var i = 0; i < feedback.length; i++) { %>
-            <div class="card"></div>
-              <div class="card-body"></div>
-                <div class="col-4"></div>
-                  <h5><%= feedback[i].reviewtext %></h5>   
+            <div class="card">
+              <div class="card-header">Review:</div>
+              <div class="card-body"><h5><%= feedback[i].reviewtext %></h5></div>
+              <div class="card-footer">Rating:<%= feedback[i].reviewtext %></div>
+            </div>   
             <% } %>
           </div>
         </div>
