--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -204,13 +204,15 @@
           </div>
           <div class="card" style="width: 57rem;">
             <div class="card-header"><h5>Other User Feedback:</h5></div>
-          <% for(var i = 0; i < feedback.length; i++) { %>
-            <div class="card">
-              <div class="card-header">Review:</div>
-              <div class="card-body"><h5><%= feedback[i].reviewtext %></h5></div>
-              <div class="card-footer">Rating:<%= feedback[i].reviewtext %></div>
-            </div>   
-            <% } %>
+              <div class="row">
+              <% for(var i = 0; i < feedback.length; i++) { %>
+                <div class="card">
+                  <div class="card-header">Review:</div>
+                  <div class="card-body"><h5><%= feedback[i].reviewtext %></h5></div>
+                  <div class="card-footer">Rating:<%= feedback[i].reviewtext %></div>
+                </div>   
+                <% } %>
+              </div>
           </div>
         </div>
       </div>
