--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -205,7 +205,7 @@
           <div class="card" style="width: 57rem;">
             <div class="card-header"><h5>Other User Feedback:</h5></div>
               <div class="row">
-                <div class="col-4">
+                <div class="column">
                 <% for(var i = 0; i < feedback.length; i++) { %>
                   <div class="card">
                     <div class="card-header">Review:</div>
