--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -204,6 +204,7 @@
           </div>
           <div class="card" style="width: 57rem;">
             <div class="card-header"><h5>Other User Feedback:</h5></div>
+            <div class="card-body">
               <div class="row">
               <% for(var i = 0; i < feedback.length; i++) { %>
                 <div class="column">
