--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -202,25 +202,18 @@
               </div>
             </div>
           </div>
-          <div class="card" style="width: 57rem;">
-            <div class="card-header"><h5>Other User Feedback:</h5></div>
-            <div class="card-body">
-              <div class="row">
-              <% for(var i = 0; i < feedback.length; i++) { %>
-                <div class="column">
-                  <div class="card">
-                    <div class="card-header">Review:</div>
-                    <div class="card-body"><h5><%= feedback[i].reviewtext %></h5></div>
-                    <div class="card-footer">Rating:<%= feedback[i].reviewtext %></div>
-                  </div> 
-                </div>  
-              <% } %>
-              </div>
-            </div>
+          <h5>Other User Feedback:</h5></div>
+          <div class="row">
+          <% for(var i = 0; i < feedback.length; i++) { %>
+            <div class="column">
+              <div class="card">
+                <div class="card-header">Review:</div>
+                <div class="card-body"><h5><%= feedback[i].reviewtext %></h5></div>
+                <div class="card-footer">Rating:<%= feedback[i].reviewtext %></div>
+              </div> 
+            </div>  
+          <% } %>
           </div>
-        </div>
-      </div>
-    </div>
     <button id="openChat" class="open-button" onclick="openForm()">Chat</button>
     <div class="chat-popup" id="chatbox">
       <form id="message-form" class="form-container">
