--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -214,6 +214,8 @@
             </div>  
           <% } %>
           </div>
+        </div>
+      </div>
     <button id="openChat" class="open-button" onclick="openForm()">Chat</button>
     <div class="chat-popup" id="chatbox">
       <form id="message-form" class="form-container">
