--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -242,7 +242,7 @@
                   <div class="card">
                     <div class="card-header">Review:</div>
                     <div class="card-body"><h5><%= feedback[i].reviewtext %></h5></div>
-                    <div class="card-footer">Rating:<%= feedback[i].reviewtext %></div>
+                    <div class="card-footer">Rating: <%= feedback[i].rating %></div>
                   </div> 
                 </div>  
               <% } %>
