--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -132,7 +132,39 @@
       .form-container .btn:hover, .open-button:hover {
         opacity: 1;
       }
+      /* from w3 */
+      /* Float four columns side by side */
+      .column {
+        float: left;
+        width: 25%;
+        padding: 0 10px;
+      }
 
+      /* Remove extra left and right margins, due to padding */
+      .row {margin: 0 -5px;}
+
+      /* Clear floats after the columns */
+      .row:after {
+        content: "";
+        display: table;
+        clear: both;
+      }
+
+      /* Responsive columns */
+      @media screen and (max-width: 600px) {
+        .column {
+          width: 100%;
+          display: block;
+          margin-bottom: 20px;
+        }
+      }
+
+      /* Style the counter cards */
+      .card {
+        padding: 16px;
+        text-align: center;
+        background-color: #f1f1f1;
+      }
     </style>
   </head>
   <body style="background-color:#000000">
@@ -196,36 +228,20 @@
               </div>
             </div>
           </div>
-          <div class="card-body">
-            <div class="row">
-              <div class="col-4">
-                <div class="card mx-auto" style="width: 57rem;">
-                  <div class="card-body">
-                    <div class="myBox">
-                      <h5>Other User Feedback:</h5>
-                      <% if (feedback) { %>
-                        <% for(var i = 0; i < feedback.length; i++) { %>
-                          <div class="card-body">
-                            <div class="row">
-                              <div class="col-4">
-                                <div class="card mx-auto" style="width: 57rem;">
-                                  <div class="card-body">
-                                    <div class="feedback">
-                                      <p><%= feedback[i].reviewtext %></p>
-                                    </div>
-                                   </div>
-                                 </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        <% } %>
-                      <% } %>
-                    </div>
-                </div>
+          <div class="card-header"><h5>Other User Feedback:</h5></div>
+            <div class="card-body">
+              <div class="row">
+              <% for(var i = 0; i < feedback.length; i++) { %>
+                <div class="column">
+                  <div class="card">
+                    <div class="card-header">Review:</div>
+                    <div class="card-body"><h5><%= feedback[i].reviewtext %></h5></div>
+                    <div class="card-footer">Rating: <%= feedback[i].rating %></div>
+                  </div> 
+                </div>  
+              <% } %>
               </div>
             </div>
-          </div>
         </div>
       </div>
     </div>
