--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -207,20 +207,10 @@
                     <div>
                       <h3><%= user.firstname %> <%= user.lastname %></h3>
                       <h5><%= user.location %></h5>
-                      <div class="card mx-auto" style="width: 33rem;">
-                          <div class="card-body">
-                            <h5>Bio:</h5>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                          </div>
+                      <div class="card">
+                        <div class="card-header">Bio:</div>
+                        <div class="card-body"><
+                          <textarea readonly cols="50" rows="50"></textarea>
                         </div>
                     </div>
                   </div>
