--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -210,7 +210,7 @@
                       <div class="card">
                         <div class="card-header">Bio:</div>
                         <div class="card-body"><
-                          <textarea readonly cols="20" rows="20"></textarea>
+                          <textarea readonly></textarea>
                         </div>
                     </div>
                   </div>
