--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -207,19 +207,10 @@
                     <div>
                       <h3><%= user.firstname %> <%= user.lastname %></h3>
                       <h5><%= user.location %></h5>
-                      <div class="card">
-                        <div class="card-header">Bio:</div>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                        </div>
+                      <div class="card mx-auto" style="width: 33rem;">
+                        <div class="card-head">Bio:</div>
+                        <div class="card-body"><%= user.bio %></div>
+                      </div>
                     </div>
                   </div>
                 </div>
