--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -214,20 +214,13 @@
                       <h3><%= user.firstname %> <%= user.lastname %></h3>
                       <h5><%= user.location %></h5>
                       <div class="card mx-auto" style="width: 33rem;">
-                          <div class="card-body">
-                            <h5>Bio:</h5>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                          </div>
-                        </div>
+                        <div class="card mx-auto" style="width: 33rem;">
+                        <div class="card-head">Bio:</div>
+                      <% if(user.bio) {%>
+                        <div class="card-body"><%= user.bio %></div>
+                      <% } else { %>
+                        <div class="card-body">No Bio</div>
+                      <% } %>
                     </div>
                   </div>
                 </div>
