--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -226,9 +226,11 @@
               </div>
             </div>
           </div>
+          <div class="card mx-auto" style="width: 33rem;">
             <div class="card-header"><h5>Other User Feedback:</h5></div>
             <div class="card-body">
               <div class="row">
+            <% if (feedback) { %>
               <% for(var i = 0; i < feedback.length; i++) { %>
                 <div class="column">
                   <div class="card">
@@ -239,6 +241,7 @@
                 </div>  
               <% } %>
               </div>
+              <% } %>
             </div>
           </div>
         </div>
