Added ability to edit bio

--- a/views/pages/Profile.ejs
+++ b/views/pages/Profile.ejs
@@ -178,6 +178,7 @@
                       <div class="card mx-auto" style="width: 33rem;">
                           <div class="card-body">
                             <h5>Bio:</h5>
+                            <%= user.bio %>
                             <br>
                             <br>
                             <br>
