--- a/views/pages/editBio.ejs
+++ b/views/pages/editBio.ejs
@@ -60,7 +60,7 @@
           <br>
           <div class="card mx-auto" style="width: 30rem;">
             <div class="card-body">
-              <form action="/editProfile/change" method="POST" onsubmit="formDone();" name="regForm" id="regForm" >
+              <form action="/editBio/valid" method="POST" onsubmit="formDone();" name="regForm" id="regForm" >
                 <div class="row">
                   <div class="col">
                     <div class="form-group">
