--- a/views/pages/regPage.ejs
+++ b/views/pages/regPage.ejs
@@ -111,7 +111,7 @@
                   <label class="form-check-label" for="student">Student</label>
                 </div>
                 <div class="form-check form-check-inline">
-                  <input name="tutorStatus" class="form-check-input" onclick ="tutorInfo('tutorCard', 1);" type="checkbox" name = "tutorStatus" id="tutorStatus">
+                  <input name="tutorStatus" class="form-check-input" onclick ="tutorInfo('tutorCard', 1);" type="checkbox" name = "tutorStatus" id="tutorStatus" value="None">
                   <label class="form-check-label" for="tutorCheck">Tutor</label>
                 </div>
                 <span class="error"><small id="typeStatus" style="color:red"></small></span>
