--- a/views/pages/settings.ejs
+++ b/views/pages/settings.ejs
@@ -60,10 +60,10 @@
           <br>
           <div class="card mx-auto" style="width: 30rem;">
             <div class="card-body">
-              <form action="/regPage/valid" method="POST" onsubmit="formDone();" name="regForm" id="regForm" >
+              <form action="/editBio/valid" method="POST" onsubmit="formDone();" name="regForm" id="regForm" >
                 <div class="row">
                   <div class="col">
-                    <a class="active"href="/editProfile">Edit Profile</a>
+                    <a class="active"href="/editBio">Edit Profile</a>
 
                   </div>
                 </div>
