--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -199,6 +199,12 @@
                 <span class="fa fa-star"></span>
                 <br>
               </div>
+              <br>
+              <br>
+              <form action="/feedback" method="GET">
+                <input type="number" name="studentID" style="visibility: hidden" value=<%= user.id %>>
+                <center><input class="btn btn-lg btn-dark" type="submit" value="Leave Feedback"></input></center>
+              </form>
             </div>
             <div class="col-4">
               <div class="row">
