--- a/views/pages/searchPage.ejs
+++ b/views/pages/searchPage.ejs
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <% include ../partials/header %>
+  <% include ../partials/header %>
+  <style>
+    .c-drop{
+      background-color: none;
+      color: black;
+      padding: 16px;
+      font-size: 16px;
+      border: none;
+      cursor: pointer;
+    }
+    .c-drop-cont{
+      display: show;
+      position: absolute;
+      background-color: none;
+      min-width: 160px;
+      z-index: 1;
+    } 
+    .c-drop-cont option{ 
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+    } 
+
+  </style>
 </head>
   <body style="background-color:#000000">
     <div class="topnav">
@@ -14,7 +38,7 @@
       <div class="form-group">
         <form action="/tutor-finder/filter" method="GET">
           <label for="filterType" style="color:#C7BA7C;font-family:georgia" class="h6">Filter</label>
-          <select name="filterChoice" class="custom-select" id="filterType" onchange="this.form.submit()">
+          <select name="filterChoice" class="c-drop" id="filterType" onchange="this.form.submit()">
             <option>Select a Filter</option>
             <option value="1">Alphabetical</option>
             <option value="2">Rating</option>
@@ -22,13 +46,15 @@
           </select>
         </form>
         <form action="/userProfile">
-          <select name="studentID" class="custom-select" id="tutorDropDown" onchange="this.form.submit()">
-            <option>Select a Tutor</option>
-          <% for (var i = 0;i < tutors.length; i++) { %>
-            <% console.log(tutors[i].id) %>
-            <option value=<%= tutors[i].id %>><%= "Name: " + tutors[i].firstname + " " +  tutors[i].lastname + "\t" + "Rating: " + tutors[i].rating + "\t" + "Major: " + tutors[i].subjects%></option>  
-          <% } %>  
-          </select>
+          <div name="studentID" class="c-drop" id="tutorDropDown" onchange="this.form.submit()">
+            <div class="c-drop-cont">
+              <option>Select a Tutor</option>
+            <% for (var i = 0;i < tutors.length; i++) { %>
+              <% console.log(tutors[i].id) %>
+              <option value=<%= tutors[i].id %>><%= "Name: " + tutors[i].firstname + " " +  tutors[i].lastname + "\t" + "Rating: " + tutors[i].rating + "\t" + "Major: " + tutors[i].subjects%></option>  
+            <% } %> 
+            </div> 
+          </div>
         </form>
       </div>
     </div>
