--- a/views/pages/searchPage.ejs
+++ b/views/pages/searchPage.ejs
@@ -19,7 +19,7 @@
       z-index: 1;
     } 
     .c-drop-cont option{ 
-      color: black;
+      color: #C7BA7C;
       padding: 12px 16px;
       text-decoration: none;
       display: block;
