--- a/views/pages/searchPage.ejs
+++ b/views/pages/searchPage.ejs
@@ -38,7 +38,7 @@
       <div class="form-group">
         <form action="/tutor-finder/filter" method="GET">
           <label for="filterType" style="color:#C7BA7C;font-family:georgia" class="h6">Filter</label>
-          <select name="filterChoice" class="form-control" id="filterType" onchange="this.form.submit()">
+          <select name="filterChoice" class="form-control" id="filterType" onclick="this.form.submit()">
             <option>Select a Filter</option>
             <option value="1">Alphabetical</option>
             <option value="2">Rating</option>
