--- a/views/pages/searchPage.ejs
+++ b/views/pages/searchPage.ejs
@@ -4,7 +4,7 @@
   <% include ../partials/header %>
   <style>
     .c-drop{
-      background-color: none;
+      background-color: black;
       color: #C7BA7C;
       padding: 16px;
       font-size: 16px;
@@ -16,9 +16,7 @@
       position: absolute;
       background-color: none;
       min-width: 160px;
-      z-index: 1;
-    } 
-    .c-drop-cont option{ 
+      z-index: 1; 
       color: #C7BA7C;
       padding: 12px 16px;
       text-decoration: none;
@@ -47,10 +45,10 @@
         </form>
         <form action="/userProfile">
           <select name="studentID" id="tutorDropDown" class="c-drop"onchange="this.form.submit()">
-              <option>Select a Tutor</option>
+              <option class="c-drop-cont">Select a Tutor</option>
             <% for (var i = 0;i < tutors.length; i++) { %>
               <% console.log(tutors[i].id) %>
-              <option value=<%= tutors[i].id %>><%= "Name: " + tutors[i].firstname + " " +  tutors[i].lastname + "\t" + "Rating: " + tutors[i].rating + "\t" + "Major: " + tutors[i].subjects%></option>  
+              <option class="c-drop-cont" value=<%= tutors[i].id %>><%= "Name: " + tutors[i].firstname + " " +  tutors[i].lastname + "\t" + "Rating: " + tutors[i].rating + "\t" + "Major: " + tutors[i].subjects%></option>  
             <% } %> 
             </div> 
           </select>
